# Bike-Rental-Prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  Makefile  README.md  README_data_gen.md  alembic.ini  bike_data.parquet  data_gen.py  docker-compose.yaml  eda.py  holiday_test.parquet  pyproject.toml  test_data.parquet
.github/workflows/: pre-commit-autoupdate.yml
airflow/dags/: ml_dag.py
alembic/: env.py
alembic/versions/: 0251b8fe4a73_updated_is_active_from_false_to_true.py  b45aae6a5293_initial_migration.py
data/: bikes_2020_2024.parquet  data-dict.txt
docker/: .dockerignore  Dockerfile.airflow  Dockerfile.mlflow  init-databases.sh  requirements.txt
docs/: ALEMBIC_GUIDE.md  ARCHITECTURE.md  DYNAMIC_DB_CONFIG.md  EDA_Demo.md  MODEL_LOADING.md  NOTES.md  README_data_gen.md  YEAR_COMPATIBILITY.md  data_dict.txt
mlruns/0/: meta.yaml
mlruns/566076133942617339/: meta.yaml
mlruns/566076133942617339/0a8188187a4a4705a190c647c95b1768/: meta.yaml
mlruns/566076133942617339/0a8188187a4a4705a190c647c95b1768/metrics/: best_rmse  mean_mae  mean_mape  mean_rmse  std_rmse
mlruns/566076133942617339/0a8188187a4a4705a190c647c95b1768/tags/: mlflow.source.name  owner
mlruns/566076133942617339/5dc13d8abeb740249384e9ce4f8c8c26/: meta.yaml
notebooks/: 00-lab.ipynb  01-eda.ipynb  02-feat-eng.ipynb  xgboost_model.json
src/: __init__.py  exceptions.py
src/api/: app.py  auth.py  setup.py  utilities.py
src/api/utilities/: ml_utils.py  utilities.py
src/config/: __init__.py  config.py  config.yaml  settings.py
src/db/: crud.py  models.py
src/exp_tracking/: mlflow.py  mlflow_s3_utils.py  mlflow_tracker.py  model_loader.py  s3_verification.py
src/ml/: dynamic_pricing.py  feature_engineering.py  trainer.py  utils.py  visualization.py
src/schemas/: __init__.py  input_schema.py  models.py  output_schema.py  types.py
src/utilities/: data_validator.py  exploratory_analysis.py  service_discovery.py  utils.py
(+9 files in other folders)
