[project]
name = "bike-rental-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "holidays>=0.81",
    "narwhals>=2.5.0",
    "numpy>=2.0",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pendulum>=3.1.0",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.14.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "nb-black-formatter>=1.0.1", "ruff>=0.13.1"]
